# rfirst

./: Cargo.toml  README.md
advanced_generics/: README.md
advanced_generics/src/: auth.rs  complex_args.rs  functions.rs  identifier.rs  iterator.rs  lib.rs
advanced_trait_objects/: Cargo.toml
advanced_trait_objects/benches/: trait_object.rs
advanced_trait_objects/src/: lib.rs  trait_object_in_fn.rs
async_internals/: Cargo.toml
async_internals/examples/: async_type.rs  self_ref.rs  self_ref1.rs  self_ref_pin.rs
async_learn/: Cargo.toml
async_learn/examples/: async_and_thread.rs  async_io.rs  async_test.rs  async_with_mutex.rs  block_async_task.rs  sync_io.rs  tcplistener.rs  thread_io.rs
async_learn/src/: lib.rs
async_stream/: Cargo.toml  README.md
async_stream/examples/: async_read.rs  fibo.rs  readline.rs  sink.rs  sink_file.rs  stream_iter.rs  yamux_client.rs  yamux_server.rs
async_stream/src/: lib.rs
closure/: README.md
closure/examples/: closure_size1.rs  fn.rs  fn_mut.rs  fn_once.rs  fn_return.rs  fn_trait.rs  mimic_closure.rs
con_utils/: Cargo.toml  README.md
con_utils/src/: channel.rs
concurrency/: Cargo.toml
concurrency/examples/: actor.rs  condvar.rs  metrics.rs  naive_lock.rs  naive_lock_atomic.rs
data_structure/: Cargo.toml
data_structure/src/: boxed.rs  iter.rs  iter_ext.rs  slice1.rs  slice2.rs  slice3.rs  slice4.rs  slice5.rs  type_name.rs  window_count.rs
error_handling/src/: main.rs
ffi/bzlib_sys/: Cargo.toml  build.rs
ffi/bzlib_sys/src/: bindings.rs  lib.rs
ffi/ffi/: Cargo.toml  bindings.h
ffi/ffi/src/: lib.rs
ffi/ffi_math/: Cargo.toml
hash_table/: Cargo.toml
hash_table/src/: btreemap1.rs  btreemap2.rs  hash.rs  hashmap1.rs  hashmap2.rs  hashmap3.rs  siphasher.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml  build.rs
kv/examples/: client.rs  dummy_server.rs  server.rs
kv/src/: error.rs  lib.rs
kv/src/pb/: abi.rs  mod.rs
kv/src/service/: command_service.rs  mod.rs
kv/src/storage/: memory.rs  mod.rs
lifetime/: Cargo.toml
lifetime/src/: lifetime.rs  lifetime1.rs  lifetime3.rs  strtok.rs
memory/: Cargo.toml
memory/examples/: alignment.rs  raii.rs
memory/misc/: test.c
multi_owner/: Cargo.toml
multi_owner/src/: dag.rs  dag_mut.rs  refcell.rs
queryer/: Cargo.toml  README.md
queryer/examples/: covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  lib.rs
rgrep/: Cargo.toml
rgrep/src/: error.rs  lib.rs  main.rs
smart_pointers/: Cargo.toml  README.md
smart_pointers/src/: allocator.rs  cow1.rs  cow2.rs  guard.rs  guard1.rs  mystring.rs  rawpointer.rs
sys_traits/: Cargo.toml  README.md
sys_traits/src/: convert.rs  copy_drop.rs  default.rs  deref.rs  linked_list.rs  send_sync.rs
thumbor/: Cargo.toml
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: mod.rs
traits/: Cargo.toml
traits/src/: animal.rs  complex.rs  formatter.rs  iterator.rs  parse.rs  parse1.rs  parse2.rs  trait_object.rs  write.rs
type_system/: Cargo.toml
type_system/src/: writer.rs
unsafe_rust/: Cargo.toml  README.md
unsafe_rust/examples/: c_ffi.rs  raw_pointer.rs  raw_pointer_crash.rs  rc_send.rs  split.rs  static_mutable.rs  static_mutable_safe.rs  static_mutable_safe1.rs  unsafe_fn1.rs  unsafe_fn2.rs  unsafe_trait_and_fn.rs
