[package]
name = "async_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0.86"
blake3 = "1.5.1"
futures = "0.3.30"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8.14"
