[package]
name = "async_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
futures = "0.3.30"
pin-project = "1.1.5"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat", "codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
yamux = "0.9"
