[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"# 错误处理
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0" # 命令终端多彩显示
jsonxf = "1.1.1" # json pretty print 格式化
mime = "0.3.17" # 处理mime类型
reqwest = { version = "0.12.5", features = ["json"] } # http 客户端
tokio = { version = "1.38.0", features = ["full"] } # 异步处理库
