[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
glob = "0.3.1"
rayon = "1.10.0"
regex = "1.10.5"
itertools = "0.10"
anyhow = "1.0.54"
colored = "2.0.0"
thiserror = "1.0.39"