[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 错误处理
anyhow = "1.0.86"
# web 服务器
axum = "0.2"
# base64编解码
base64 = "0.13"
# 处理字节流
bytes = "1.6.0"
# 处理图片
image = "0.23"
# 通过宏更方便地初始化静态变量
lazy_static = "1.4.0"
# LRU 缓存
lru = "0.12.3"
# url 编解码
percent-encoding = "2.3.1"
# 图片处理
photon-rs = "0.3.2"
# protobuf 处理
prost = "0.12.6"
# http 客户端
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
#服务处理及中间件
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
#http 中间件
tower-http = {version = "0.5.2", features = ["add-extension", "compression-full", "trace" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.6"
